# etherdream-for-processing

./: .gitignore  create-jni-header.sh  run.sh
etherdream-c/: CMakeLists.txt  etherdream.c  etherdream.h  protocol.h  spacefiller_etherdream_EtherdreamDevice.cpp  spacefiller_etherdream_EtherdreamDevice.h
etherdream-java/: build.xml
etherdream-java/src/spacefiller/etherdream/: Etherdream.java  EtherdreamDevice.java
etherdream-java/src/spacefiller/festival/: AnimateMode.java  EditMode.java  EtherdreamUtils.java  Festival.java  Mode.java
etherdream-java/src/spacefiller/ilda/: IldaPoint.java
etherdream-java/tests/spacefiller/etherdream/: EtherdreamDeviceTest.java
